fixed form input group spacing issue with error display

--- a/client/src/styles/css/index.css
+++ b/client/src/styles/css/index.css
@@ -83,24 +83,11 @@ input:not([type=checkbox]):not([type=radio]), textarea {
     background: white !important; }
     .form__input--error {
       border: 1px solid red !important; }
-    @media (min-width: 1600px) {
-      .form__input {
-        padding: 15px;
-        font-size: 1.2em;
-        margin-bottom: 20px; } }
     .form__input__search-container {
       position: relative; }
     .form__input--search {
       padding: 8px;
       font-size: .8em; }
-      @media (min-width: 901px) {
-        .form__input--search {
-          padding: 12px;
-          font-size: .9em; } }
-      @media (min-width: 1600px) {
-        .form__input--search {
-          padding: 12px;
-          font-size: 1em; } }
     .form__input--select {
       -webkit-appearance: button;
       -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
@@ -125,10 +112,6 @@ input:not([type=checkbox]):not([type=radio]), textarea {
       white-space: nowrap;
       padding: 8px !important;
       font-size: .8em !important; }
-      @media (min-width: 1600px) {
-        .form__input--select-grid {
-          padding: 12px !important;
-          font-size: 1em !important; } }
     .form__input--option {
       -webkit-appearance: none;
       -moz-appearance: none;
@@ -222,10 +205,6 @@ input:not([type=checkbox]):not([type=radio]), textarea {
     font-size: .8em !important;
     font-weight: 100;
     color: #545454; }
-    @media (min-width: 1600px) {
-      .form__input-grid {
-        padding: 12px !important;
-        font-size: 1em !important; } }
   .form__label {
     font-family: "Titillium Web", Helvetica, Arial, sans-serif;
     text-transform: uppercase;
@@ -245,9 +224,6 @@ input:not([type=checkbox]):not([type=radio]), textarea {
     color: #182848;
     font-weight: 300;
     letter-spacing: 2px; }
-    @media (min-width: 1600px) {
-      .form__label--white {
-        font-size: 1.2em; } }
   .form__error {
     font-family: "Titillium Web", Helvetica, Arial, sans-serif;
     color: #a94442;
@@ -411,21 +387,25 @@ input:not([type=checkbox]):not([type=radio]), textarea {
 
 ::-webkit-input-placeholder {
   color: #545454;
+  opacity: 0.8;
   -webkit-transition: opacity 0.35s ease-in-out;
   transition: opacity 0.35s ease-in-out; }
 
 ::-moz-placeholder {
   color: #545454;
+  opacity: 0.8;
   -webkit-transition: opacity 0.35s ease-in-out;
   transition: opacity 0.35s ease-in-out; }
 
 :-ms-input-placeholder {
   color: #545454;
+  opacity: 0.8;
   -webkit-transition: opacity 0.35s ease-in-out;
   transition: opacity 0.35s ease-in-out; }
 
 :-moz-placeholder {
   color: #545454;
+  opacity: 0.8;
   -webkit-transition: opacity 0.35s ease-in-out;
   transition: opacity 0.35s ease-in-out; }
 
